--- a/pug/index.pug
+++ b/pug/index.pug
@@ -81,8 +81,8 @@ block content
                 .evolution__col
                     .evolution__preview.first
                         img(src="/img/preview_1.png", alt="alt")
-                    //- .evolution__preview.second
-                    //-     //- img(src="/img/preview_2.png", alt="alt")
+                    .evolution__preview.second
+                        img(src="/img/preview_2.png", alt="alt")
                     .evolution__preview.third
                         img(src="/img/preview_3.png", alt="alt")
 
